# ChangeLog for media-sound/gnome-music
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gnome-music/ChangeLog,v 1.5 2014/02/27 20:51:45 pacho Exp $

*gnome-music-3.10.3 (27 Feb 2014)

  27 Feb 2014; Pacho Ramos <pacho@gentoo.org> +gnome-music-3.10.3.ebuild:
  Version bump

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gnome-music-3.10.1.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gnome-music-3.10.1.ebuild:
  arch stable, bug 888

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gnome-music-3.10.1.ebuild:
  Let people emerge this by default, bug #472932

*gnome-music-3.10.1 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +gnome-music-3.10.1.ebuild,
  +metadata.xml:
  New package for Gnome 3.10