@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST gnome-music-3.10.1.tar.xz 1374660 SHA256 3b75643e8a6e4d9b44b2572f0ddecfa0ec32affd9172c43a4bec909d15ac9d7c SHA512 5991209053c3c993d74e39e399f1a5e1e79ae12497e1c29d8c91e2e3919b38957e67b35a2b5b86aa4dc21fcf9fbd486d651dbc0cb62bb81b80dcde2eab9e9240 WHIRLPOOL 3fee7d066f357584f853cf9a2405159ffb8a4626eccfa3332d5569ab833fca8a4f0b5a374517eee52d11405673be66f8767d1d608f4cd0e30042b39ce870a7b6
 DIST gnome-music-3.10.3.tar.xz 1380356 SHA256 c07e8dcde2cc67bcd0b9d6b8dfb6b16c73c65700d7bd80087068da6e037faf68 SHA512 5baa47c05df8aacaa7896675da976800f2469b51af9e55590094e4b64ef3669984a2e02cf8367d8882a703ff8a975f6de3670ee7137b5e7958de119ddf8a213e WHIRLPOOL 0265163bb71781c931b1be971e94a6e3d30b25e82a23d6795df6d739c77e14e4042e61b543921cf77f3dfefe1d0e6c28ff89bf96df3fd79103a77c96ba080c95
-EBUILD gnome-music-3.10.1.ebuild 1255 SHA256 c349a46fe676ed45819d0d925b09c9fff3f05aef248ead948546da5bae09f0d0 SHA512 829479b2b1adecb5682fa840e185fd9df1ea1f98b0a8b6488f4c7febb50f2032693e06d04a09c39c5e3c890fb3f5603594cce202cbb2aa3e8dcd7a65c37dac29 WHIRLPOOL 4a0dbafa6bd1b10bf38305f30c083e3282f83a3d39972ae3a96d0d4b49beff0cd056cfaadf0a5914f33a1d7a18ab66c838de02da5afc86bade432f1540276332
-EBUILD gnome-music-3.10.3.ebuild 1255 SHA256 82a2e81841156a0ef65c55036d20121a32b9879c619b92c5996b3054fa73c661 SHA512 c59f8ceb1f7afd5d8712ba8ddb9d57b6cb7f1453f5e2ddf85f68944afef190e6ba19fbe40cdb0e39d85f7e740138cde74572aa59c6cd640c86bc837999946d49 WHIRLPOOL bc9902df37970c0151e345c3bf17dfabc1002db15146943af59e74ddd5d686996a484e82832c4f7a20e8b4afe287bbb4e7f153c253fb0ced2b8fd5c074e24ce1
-MISC ChangeLog 823 SHA256 88155a4ef168df1e69569422ab45563321a3b03d7796214f856f36a4dd1357bc SHA512 8db8632f4167cf5a9f3e31a05f54dffb90e5381803d6030965c2111711ecc63ce4ba6fba9baacb589c3a2159c22e9b42959c32064cf1254c6fee774116a63922 WHIRLPOOL eac1922600b2f78982b519b1b2c08fc9c634903b6a772e9bc200c4c3f2efb76cacbb5b08d5929af9316271686f07541015119957a28e3f02b6bdece5977e1119
+EBUILD gnome-music-3.10.3.ebuild 1264 SHA256 9c6f41d077034c83d806550baba87c0483e950d1592c22a4dc66a72e3b43f3be SHA512 5e04ab30bd4deb9727aa3885b9c740560076d1ed83ae43f18e8402aedcf239373f6bbc155b964343fb7d6dbc41c461e05137c074c43fd2c207d3d411a1619a66 WHIRLPOOL f89477ab29bbb0dfe2690541071006597d4c42c6fbbbc376972d9d4702990e8ac8148b7f7653c4c16a182f7dff924cb81c6730d91238cccb9ba3c59789e5c8d3
+MISC ChangeLog 995 SHA256 9b22d147e5dccbf48a895556fbd6d73317865f0b1ad3ef21fccce05576030390 SHA512 648d62285cb9dcfe0c1b34669e0139d4d667c556dbdd9997bbb75887759646e3d1d5475071c788064a689c14645c9c825266a770e73d3c2b831366f50b323c09 WHIRLPOOL 07844bc06533529fc26b499034f0c026cfa68d2396538ec5455fe4bfc8c3b6a4d946d4525db0f26dbcd94412640b92c96b3c5e9799c9d171a7370e98d19b5789
 MISC metadata.xml 160 SHA256 4d793ecb79b17794248102d8409d16bc27b1022c72038bd2d1241e129693d5f2 SHA512 677650c05f31fc27035e12f3f5e4b095715dfe12d2d3483f800bfbc6e986a98dbb1997cd52ad7a177b5c120c9b87fe5a2452a4f0f9852ac9a58262e0c5d576c9 WHIRLPOOL 070602fb27fee6a25035c9e93f5c2422270a5781fd11dac318d3f5c32cf9e49163abf7999729df230d3e181b6a1362982744e1f0ac016bf59a3458ae23abbb83
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMPpWIACgkQCaWpQKGI+9Q2AgCfd/gdBsBvPdD2WiKCtB5bj8rD
-Zb4AniRvqNpSNzBbUVlEZ/aEKZ1CJr7A
-=ZfwL
+iEYEAREIAAYFAlMWVZMACgkQCaWpQKGI+9TfoQCffNCQvZARk/3oQwfayoPYSo1E
+C7AAnRX3+LwjoFj/talCbYw37Wu8OHop
+=iFUG
 -----END PGP SIGNATURE-----
