@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
-DEPEND=python_single_target_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) dev-lang/python-exec:=[python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_single_target_python3_2(+)?,python_single_target_python3_3(+)?] >=dev-libs/glib-2.28:2 >=dev-libs/gobject-introspection-1.35.9 >=media-libs/grilo-0.2.6:0.2[introspection] >=x11-libs/gtk+-3.9:3[introspection] >=dev-util/intltool-0.26 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
-DESCRIPTION=Music management for Gnome
-EAPI=5
-HOMEPAGE=http://wiki.gnome.org/Apps/Music
-IUSE=python_single_target_python3_2 +python_single_target_python3_3 python_targets_python3_2 python_targets_python3_3 python_single_target_python3_2 python_single_target_python3_3
-KEYWORDS=~amd64
-LICENSE=GPL-2+
-RDEPEND=python_single_target_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) dev-lang/python-exec:=[python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_single_target_python3_2(+)?,python_single_target_python3_3(+)?] >=dev-libs/glib-2.28:2 >=dev-libs/gobject-introspection-1.35.9 >=media-libs/grilo-0.2.6:0.2[introspection] >=x11-libs/gtk+-3.9:3[introspection] app-misc/tracker[introspection(+)] || ( app-misc/tracker[gstreamer] app-misc/tracker[xine] ) dev-python/pygobject:3[cairo,python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_single_target_python3_2(+)?,python_single_target_python3_3(+)?] dev-python/dbus-python[python_targets_python3_2(-)?,python_targets_python3_3(-)?,python_single_target_python3_2(+)?,python_single_target_python3_3(+)?] media-libs/gstreamer:1.0[introspection] media-libs/gst-plugins-base:1.0[introspection] media-plugins/gst-plugins-meta:1.0 media-plugins/grilo-plugins:0.2
-REQUIRED_USE=python_single_target_python3_2? ( python_targets_python3_2 ) python_single_target_python3_3? ( python_targets_python3_3 ) ^^ ( python_single_target_python3_2 python_single_target_python3_3 )
-SLOT=0
-SRC_URI=mirror://gnome/sources/gnome-music/3.10/gnome-music-3.10.1.tar.xz
-_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	9637c29fc715b17a6328f24251129557	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	82a55861314bbcedaf1e08ed4dd651b3	python-utils-r1	86e503f2f5e7da7163dc3e07c12cea62	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=a326b3efe83cce79b05530880d1c3367
