@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/gnome-music
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnome-music/ChangeLog,v 1.5 2014/02/27 20:51:45 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnome-music/ChangeLog,v 1.6 2014/03/04 22:37:06 pacho Exp $
+
+  04 Mar 2014; Pacho Ramos <pacho@gentoo.org> -gnome-music-3.10.1.ebuild,
+  gnome-music-3.10.3.ebuild:
+  grilo-plugins[tracker] is needed (#503254 by imese and tetromino)
 
 *gnome-music-3.10.3 (27 Feb 2014)
 
